// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser \`end\` keyword can be used as a property name on objects 1`] = `
Array [
  Function {
    "func": Function {
      "body": Block {
        "startingLocation": Object {
          "end": Object {
            "column": 26,
            "line": 3,
          },
          "file": "",
          "start": Object {
            "column": 20,
            "line": 3,
          },
        },
        "statements": Array [
          Assignment {
            "name": Object {
              "isReserved": false,
              "kind": 30,
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": 26,
                  "line": 3,
                },
                "file": "",
                "start": Object {
                  "column": 20,
                  "line": 3,
                },
              },
              "text": "person",
            },
            "tokens": Object {
              "equals": Object {
                "isReserved": false,
                "kind": 28,
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": 28,
                    "line": 3,
                  },
                  "file": "",
                  "start": Object {
                    "column": 27,
                    "line": 3,
                  },
                },
                "text": "=",
              },
            },
            "value": AALiteral {
              "close": Object {
                "isReserved": false,
                "kind": 5,
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": 21,
                    "line": 5,
                  },
                  "file": "",
                  "start": Object {
                    "column": 20,
                    "line": 5,
                  },
                },
                "text": "}",
              },
              "elements": Array [
                Object {
                  "name": BrsString {
                    "kind": 2,
                    "value": "end",
                  },
                  "value": Literal {
                    "_location": Object {
                      "end": Object {
                        "column": 33,
                        "line": 4,
                      },
                      "file": "",
                      "start": Object {
                        "column": 29,
                        "line": 4,
                      },
                    },
                    "value": BrsBoolean {
                      "kind": 1,
                      "value": true,
                    },
                  },
                },
              ],
              "open": Object {
                "isReserved": false,
                "kind": 4,
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": 30,
                    "line": 3,
                  },
                  "file": "",
                  "start": Object {
                    "column": 29,
                    "line": 3,
                  },
                },
                "text": "{",
              },
            },
          },
        ],
      },
      "end": Object {
        "isReserved": false,
        "kind": 57,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": 23,
            "line": 6,
          },
          "file": "",
          "start": Object {
            "column": 16,
            "line": 6,
          },
        },
        "text": "end sub",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": 84,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": 19,
            "line": 2,
          },
          "file": "",
          "start": Object {
            "column": 16,
            "line": 2,
          },
        },
        "text": "sub",
      },
      "parameters": Array [],
      "returns": 10,
    },
    "name": Object {
      "isReserved": false,
      "kind": 30,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": 24,
          "line": 2,
        },
        "file": "",
        "start": Object {
          "column": 20,
          "line": 2,
        },
      },
      "text": "Main",
    },
  },
]
`;

exports[`parser \`end\` keyword does not produce errors 1`] = `
Array [
  Function {
    "func": Function {
      "body": Block {
        "startingLocation": Object {
          "end": Object {
            "column": 23,
            "line": 3,
          },
          "file": "",
          "start": Object {
            "column": 20,
            "line": 3,
          },
        },
        "statements": Array [
          End {
            "tokens": Object {
              "end": Object {
                "isReserved": false,
                "kind": 30,
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": 23,
                    "line": 3,
                  },
                  "file": "",
                  "start": Object {
                    "column": 20,
                    "line": 3,
                  },
                },
                "text": "end",
              },
            },
          },
        ],
      },
      "end": Object {
        "isReserved": false,
        "kind": 57,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": 23,
            "line": 4,
          },
          "file": "",
          "start": Object {
            "column": 16,
            "line": 4,
          },
        },
        "text": "end sub",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": 84,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": 19,
            "line": 2,
          },
          "file": "",
          "start": Object {
            "column": 16,
            "line": 2,
          },
        },
        "text": "sub",
      },
      "parameters": Array [],
      "returns": 10,
    },
    "name": Object {
      "isReserved": false,
      "kind": 30,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": 24,
          "line": 2,
        },
        "file": "",
        "start": Object {
          "column": 20,
          "line": 2,
        },
      },
      "text": "Main",
    },
  },
]
`;

exports[`parser \`end\` keyword is not allowed as a standalone variable 1`] = `
Array [
  Function {
    "func": Function {
      "body": Block {
        "startingLocation": Object {
          "end": Object {
            "column": 23,
            "line": 3,
          },
          "file": "",
          "start": Object {
            "column": 20,
            "line": 3,
          },
        },
        "statements": Array [
          Assignment {
            "name": Object {
              "isReserved": false,
              "kind": 30,
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": 23,
                  "line": 3,
                },
                "file": "",
                "start": Object {
                  "column": 20,
                  "line": 3,
                },
              },
              "text": "end",
            },
            "tokens": Object {
              "equals": Object {
                "isReserved": false,
                "kind": 28,
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": 25,
                    "line": 3,
                  },
                  "file": "",
                  "start": Object {
                    "column": 24,
                    "line": 3,
                  },
                },
                "text": "=",
              },
            },
            "value": Literal {
              "_location": Object {
                "end": Object {
                  "column": 30,
                  "line": 3,
                },
                "file": "",
                "start": Object {
                  "column": 26,
                  "line": 3,
                },
              },
              "value": BrsBoolean {
                "kind": 1,
                "value": true,
              },
            },
          },
        ],
      },
      "end": Object {
        "isReserved": false,
        "kind": 57,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": 23,
            "line": 4,
          },
          "file": "",
          "start": Object {
            "column": 16,
            "line": 4,
          },
        },
        "text": "end sub",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": 84,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": 19,
            "line": 2,
          },
          "file": "",
          "start": Object {
            "column": 16,
            "line": 2,
          },
        },
        "text": "sub",
      },
      "parameters": Array [],
      "returns": 10,
    },
    "name": Object {
      "isReserved": false,
      "kind": 30,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": 24,
          "line": 2,
        },
        "file": "",
        "start": Object {
          "column": 20,
          "line": 2,
        },
      },
      "text": "Main",
    },
  },
]
`;

exports[`parser certain reserved words are allowed as local var identifiers 1`] = `
Array [
  Function {
    "func": Function {
      "body": Block {
        "startingLocation": Object {
          "end": Object {
            "column": 22,
            "line": 3,
          },
          "file": "",
          "start": Object {
            "column": 16,
            "line": 3,
          },
        },
        "statements": Array [
          Assignment {
            "name": Object {
              "isReserved": false,
              "kind": 55,
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": 22,
                  "line": 3,
                },
                "file": "",
                "start": Object {
                  "column": 16,
                  "line": 3,
                },
              },
              "text": "endfor",
            },
            "tokens": Object {
              "equals": Object {
                "isReserved": false,
                "kind": 28,
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": 24,
                    "line": 3,
                  },
                  "file": "",
                  "start": Object {
                    "column": 23,
                    "line": 3,
                  },
                },
                "text": "=",
              },
            },
            "value": Literal {
              "_location": Object {
                "end": Object {
                  "column": 29,
                  "line": 3,
                },
                "file": "",
                "start": Object {
                  "column": 25,
                  "line": 3,
                },
              },
              "value": BrsBoolean {
                "kind": 1,
                "value": true,
              },
            },
          },
          Assignment {
            "name": Object {
              "isReserved": false,
              "kind": 30,
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": 22,
                  "line": 4,
                },
                "file": "",
                "start": Object {
                  "column": 16,
                  "line": 4,
                },
              },
              "text": "double",
            },
            "tokens": Object {
              "equals": Object {
                "isReserved": false,
                "kind": 28,
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": 24,
                    "line": 4,
                  },
                  "file": "",
                  "start": Object {
                    "column": 23,
                    "line": 4,
                  },
                },
                "text": "=",
              },
            },
            "value": Literal {
              "_location": Object {
                "end": Object {
                  "column": 29,
                  "line": 4,
                },
                "file": "",
                "start": Object {
                  "column": 25,
                  "line": 4,
                },
              },
              "value": BrsBoolean {
                "kind": 1,
                "value": true,
              },
            },
          },
          Assignment {
            "name": Object {
              "isReserved": false,
              "kind": 30,
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": 23,
                  "line": 5,
                },
                "file": "",
                "start": Object {
                  "column": 16,
                  "line": 5,
                },
              },
              "text": "exitfor",
            },
            "tokens": Object {
              "equals": Object {
                "isReserved": false,
                "kind": 28,
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": 25,
                    "line": 5,
                  },
                  "file": "",
                  "start": Object {
                    "column": 24,
                    "line": 5,
                  },
                },
                "text": "=",
              },
            },
            "value": Literal {
              "_location": Object {
                "end": Object {
                  "column": 30,
                  "line": 5,
                },
                "file": "",
                "start": Object {
                  "column": 26,
                  "line": 5,
                },
              },
              "value": BrsBoolean {
                "kind": 1,
                "value": true,
              },
            },
          },
          Assignment {
            "name": Object {
              "isReserved": false,
              "kind": 30,
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": 21,
                  "line": 6,
                },
                "file": "",
                "start": Object {
                  "column": 16,
                  "line": 6,
                },
              },
              "text": "float",
            },
            "tokens": Object {
              "equals": Object {
                "isReserved": false,
                "kind": 28,
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": 23,
                    "line": 6,
                  },
                  "file": "",
                  "start": Object {
                    "column": 22,
                    "line": 6,
                  },
                },
                "text": "=",
              },
            },
            "value": Literal {
              "_location": Object {
                "end": Object {
                  "column": 28,
                  "line": 6,
                },
                "file": "",
                "start": Object {
                  "column": 24,
                  "line": 6,
                },
              },
              "value": BrsBoolean {
                "kind": 1,
                "value": true,
              },
            },
          },
          Assignment {
            "name": Object {
              "isReserved": false,
              "kind": 30,
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": 23,
                  "line": 7,
                },
                "file": "",
                "start": Object {
                  "column": 16,
                  "line": 7,
                },
              },
              "text": "foreach",
            },
            "tokens": Object {
              "equals": Object {
                "isReserved": false,
                "kind": 28,
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": 25,
                    "line": 7,
                  },
                  "file": "",
                  "start": Object {
                    "column": 24,
                    "line": 7,
                  },
                },
                "text": "=",
              },
            },
            "value": Literal {
              "_location": Object {
                "end": Object {
                  "column": 30,
                  "line": 7,
                },
                "file": "",
                "start": Object {
                  "column": 26,
                  "line": 7,
                },
              },
              "value": BrsBoolean {
                "kind": 1,
                "value": true,
              },
            },
          },
          Assignment {
            "name": Object {
              "isReserved": false,
              "kind": 30,
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": 23,
                  "line": 8,
                },
                "file": "",
                "start": Object {
                  "column": 16,
                  "line": 8,
                },
              },
              "text": "integer",
            },
            "tokens": Object {
              "equals": Object {
                "isReserved": false,
                "kind": 28,
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": 25,
                    "line": 8,
                  },
                  "file": "",
                  "start": Object {
                    "column": 24,
                    "line": 8,
                  },
                },
                "text": "=",
              },
            },
            "value": Literal {
              "_location": Object {
                "end": Object {
                  "column": 30,
                  "line": 8,
                },
                "file": "",
                "start": Object {
                  "column": 26,
                  "line": 8,
                },
              },
              "value": BrsBoolean {
                "kind": 1,
                "value": true,
              },
            },
          },
          Assignment {
            "name": Object {
              "isReserved": false,
              "kind": 30,
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": 27,
                  "line": 9,
                },
                "file": "",
                "start": Object {
                  "column": 16,
                  "line": 9,
                },
              },
              "text": "longinteger",
            },
            "tokens": Object {
              "equals": Object {
                "isReserved": false,
                "kind": 28,
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": 29,
                    "line": 9,
                  },
                  "file": "",
                  "start": Object {
                    "column": 28,
                    "line": 9,
                  },
                },
                "text": "=",
              },
            },
            "value": Literal {
              "_location": Object {
                "end": Object {
                  "column": 34,
                  "line": 9,
                },
                "file": "",
                "start": Object {
                  "column": 30,
                  "line": 9,
                },
              },
              "value": BrsBoolean {
                "kind": 1,
                "value": true,
              },
            },
          },
          Assignment {
            "name": Object {
              "isReserved": false,
              "kind": 30,
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": 22,
                  "line": 10,
                },
                "file": "",
                "start": Object {
                  "column": 16,
                  "line": 10,
                },
              },
              "text": "string",
            },
            "tokens": Object {
              "equals": Object {
                "isReserved": false,
                "kind": 28,
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": 24,
                    "line": 10,
                  },
                  "file": "",
                  "start": Object {
                    "column": 23,
                    "line": 10,
                  },
                },
                "text": "=",
              },
            },
            "value": Literal {
              "_location": Object {
                "end": Object {
                  "column": 29,
                  "line": 10,
                },
                "file": "",
                "start": Object {
                  "column": 25,
                  "line": 10,
                },
              },
              "value": BrsBoolean {
                "kind": 1,
                "value": true,
              },
            },
          },
        ],
      },
      "end": Object {
        "isReserved": false,
        "kind": 57,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": 19,
            "line": 11,
          },
          "file": "",
          "start": Object {
            "column": 12,
            "line": 11,
          },
        },
        "text": "end sub",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": 84,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": 15,
            "line": 2,
          },
          "file": "",
          "start": Object {
            "column": 12,
            "line": 2,
          },
        },
        "text": "sub",
      },
      "parameters": Array [],
      "returns": 10,
    },
    "name": Object {
      "isReserved": false,
      "kind": 30,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": 20,
          "line": 2,
        },
        "file": "",
        "start": Object {
          "column": 16,
          "line": 2,
        },
      },
      "text": "Main",
    },
  },
]
`;
